--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
         <img src="img/omarnasef.jpg">
       </div>
 
+      <button class ="btn btn-light mt-3" onclick="myFunctionhagar()">Hagar Bakr <i class="fa-solid fa-gift"></i></button>
+      <div id="hagar" class="myDIV">
+        <img src="img/hagar.jpg">
+      </div>
+
       <button class ="btn btn-light mt-3" onclick="myFunctionamany()">Amany Fadlallah <i class="fa-solid fa-gift"></i></button>
       <div id="amany" class="myDIV ">
         <img src="img/amany.jpg">
