--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <img src="img/omarnasef.jpg">
       </div>
 
-      <button class ="btn btn-light mt-3" onclick="myFunctionhagar()">Hagar Bakr <i class="fa-solid fa-gift"></i></button>
+      <button class ="btn btn-light mt-3" onclick="myFunctionhagar()">Hagar Bakr <i class="fa-solid fa-gift style" style="color:goldenrod"></i></button>
       <div id="hagar" class="myDIV">
         <img src="img/hagar.jpg">
       </div>
